--- a/Microlife/Base.lproj/Main.storyboard
+++ b/Microlife/Base.lproj/Main.storyboard
@@ -346,7 +346,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9IM-ta-eKR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2029" y="2018"/>
+            <point key="canvasLocation" x="2615.5" y="2017.5"/>
         </scene>
         <!--Mail Notification View Controller-->
         <scene sceneID="mg3-NA-wtn">
@@ -357,10 +357,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <navigationItem key="navigationItem" id="VQO-fW-Ovn"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YfU-PI-YBu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1210" y="2018"/>
+            <point key="canvasLocation" x="1796.5" y="2017.5"/>
         </scene>
         <!--Edit Member Controller-->
         <scene sceneID="6xV-TR-3st">
@@ -374,7 +375,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NIn-Tf-2hm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1618" y="2018"/>
+            <point key="canvasLocation" x="2204.5" y="2017.5"/>
         </scene>
         <!--Termof Use Controller-->
         <scene sceneID="bpQ-me-O7v">
@@ -446,6 +447,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="itz-Ux-08l" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1212" y="3477"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="zVy-FM-sWi">
+            <objects>
+                <navigationController storyboardIdentifier="MailNotificationVC" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Jbn-XT-Qem" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="U47-uy-2uS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="64g-HY-4O3" kind="relationship" relationship="rootViewController" id="JKI-JU-r3Z"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bOo-NF-CBF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1209.5" y="2017.5"/>
         </scene>
     </scenes>
     <resources>
