--- a/RiskFactorCell.xib
+++ b/RiskFactorCell.xib
@@ -8,35 +8,31 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="45" id="KGk-i7-Jjw" customClass="RiskFactorCell">
-            <rect key="frame" x="0.0" y="0.0" width="469" height="45"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="KGk-i7-Jjw" customClass="RiskFactorCell">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="469" height="44.5"/>
+                <frame key="frameInset" width="375" height="59"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d3g-me-n5C">
-                        <frame key="frameInset" minX="23" minY="12" width="22" height="22"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <state key="normal" title="Button" image="all_select_a_0"/>
-                        <connections>
-                            <action selector="RFcheckbox:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="cVo-hk-gqL"/>
-                        </connections>
-                    </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cdN-Fl-h6K">
-                        <frame key="frameInset" minX="64" width="356" height="45"/>
+                        <frame key="frameInset" minX="61" width="314" height="60"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="all_select_a_0" translatesAutoresizingMaskIntoConstraints="NO" id="Ktt-4D-h3X">
+                        <frame key="frameInset" minX="19" minY="17" width="26" height="26"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
                 </subviews>
             </tableViewCellContentView>
             <connections>
                 <outlet property="RFLabel" destination="cdN-Fl-h6K" id="Xnf-wR-akm"/>
-                <outlet property="RFcheckbox" destination="d3g-me-n5C" id="DEy-UR-zqB"/>
+                <outlet property="RFcheckbox" destination="Ktt-4D-h3X" id="BDh-yN-QBs"/>
             </connections>
-            <point key="canvasLocation" x="99.5" y="30.5"/>
+            <point key="canvasLocation" x="44.5" y="39"/>
         </tableViewCell>
     </objects>
     <resources>
